feat: add mailer and setup many things
