# docs/swagger.json
@@ -9,6 +9,29 @@
   "host": "localhost:8000",
   "basePath": "/",
   "paths": {
+    "/auth/credential": {
+      "get": {
+        "description": "Put all mandatory parameter",
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "tags": ["Auth"],
+        "summary": "Get user credential",
+        "parameters": [
+          {
+            "type": "string",
+            "description": "Authorization",
+            "name": "Authorization",
+            "in": "header",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
     "/auth/edit": {
       "put": {
         "description": "Put all mandatory parameter",
@@ -78,7 +101,7 @@
         "consumes": ["application/json"],
         "produces": ["application/json"],
         "tags": ["Auth"],
-        "summary": "Login user",
+        "summary": "Login user google",
         "parameters": [
           {
             "description": "LoginRequest",
@@ -87,6 +110,34 @@
             "required": true,
             "schema": {
               "$ref": "#/definitions/dto.LoginRequest"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/dto.LoginResponse"
+            }
+          }
+        }
+      }
+    },
+    "/auth/loginGoogle": {
+      "post": {
+        "description": "Put all mandatory parameter",
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "tags": ["Auth"],
+        "summary": "Login user",
+        "parameters": [
+          {
+            "description": "GoogleLoginRequest",
+            "name": "GoogleLoginRequest",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/dto.GoogleLoginRequest"
             }
           }
         ],
@@ -206,9 +257,11 @@
     },
     "dto.EditUserRequest": {
       "type": "object",
-      "required": ["fullname"],
       "properties": {
         "fullname": {
+          "type": "string"
+        },
+        "password": {
           "type": "string"
         }
       }
@@ -229,6 +282,15 @@
       "required": ["email"],
       "properties": {
         "email": {
+          "type": "string"
+        }
+      }
+    },
+    "dto.GoogleLoginRequest": {
+      "type": "object",
+      "required": ["token"],
+      "properties": {
+        "token": {
           "type": "string"
         }
       }
